# Analysefiles

./: .gitignore  README.md  pyproject.toml
BackenCode/: README.md  pyproject.toml
BackenCode/docker/: init.sql
BackenCode/src/: db.py
BackenCode/src/agent/: __init__.py  base.py  langgraph_test.py  llm.py  logger.py  nodes.py  prompt.py  report_generator.py  report_plans_generator.py  requirement_agent.py  router.py  runtime.py  state.py
BackenCode/src/agent/requirement/: __init__.py  evidence_planner.py  llm.py  prompt.py  report_generator.py  report_plans_generator.py
BackenCode/src/api/: schemas.py
BackenCode/src/api/docs_api/: __init__.py  upload.py
BackenCode/src/api/requirement_api/: __init__.py  schemas.py  submit.py
BackenCode/src/constants/: search_options.py
BackenCode/src/flow/: graph.py  logger.py  nodes.py  prompt.py  state.py
BackenCode/src/flow/schema/: parse_type.py
BackenCode/src/mcp/: tool_registry.py
BackenCode/src/repositories/: documents.py  test.py
BackenCode/src/schemas/: __init__.py  requirement_type.py
BackenCode/src/scripts/: batch_import_docs.py  test.md
BackenCode/src/service/: __init__.py  agent_run.py  parse.py  requirement_jobs.py
BackenCode/src/test/: git前缀.md  test.md  test_langgraph.py  test_scope.py
BackenCode/src/tools/: __init__.py  back.py  registry.py  search_documents.py  search_paragraph.py  test.py
BackenCode/src/utils/: __init__.py  logger.py  messages.py
BackenCode/src/worker/: __init__.py  requirement_worker.py
BackenCode/src/workflow/: router.py  文件说明.md
DB/: doc_parsed.sql  labels.sql  (+3 more)
(+61 files in other folders)
