[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipython>=9.11.0",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-supervisor>=0.0.31",
    "langgraph-swarm>=0.1.0",
    "mcp>=1.26.0",
    "openai>=2.15.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.40.0",
]
